[project]
name = "helio-index"
version = "0.1.0"
description = ""
authors = [
    {name = "Balaji Kannan",email = "balaji.kannan@tcu.edu"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "helio_index", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
